// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/Select Async Select 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    css={
      Object {
        "map": undefined,
        "name": "1n5daz0",
        "next": undefined,
        "styles": "
        width: 25%;
        height: 100%;
      ",
        "toString": [Function],
      }
    }
  >
    <div
      role="button"
    >
      <div
        css={
          Object {
            "map": undefined,
            "name": "17wyy39",
            "next": undefined,
            "styles": "
            position: relative;
            min-width: 9.375rem;
            max-width: 38.75rem;
          ",
            "toString": [Function],
          }
        }
      >
        <div
          css={
            Object {
              "alignItems": "center",
              "display": "flex",
              "position": "relative",
              "width": "fill-available",
            }
          }
        >
          <div
            css={[Function]}
          >
            <div
              css={[Function]}
            >
              <div
                css={
                  Object {
                    "width": "100% ",
                  }
                }
              >
                <input
                  css={[Function]}
                  data-testid="select-input"
                  disabled={false}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  onKeyDown={[Function]}
                  onKeyPress={[Function]}
                  placeholder="Flavour"
                  readOnly={false}
                  required={false}
                  value=""
                />
                <label
                  css={[Function]}
                >
                  Flavour
                   
                </label>
              </div>
              <div
                css={[Function]}
              >
                <div
                  css={
                    Object {
                      "map": undefined,
                      "name": "1o9yjvp",
                      "next": undefined,
                      "styles": "
            display: flex;
            gap: 25px;
          ",
                      "toString": [Function],
                    }
                  }
                >
                  <span
                    css={
                      Object {
                        "alignItems": "center",
                        "display": "flex",
                        "justifyContent": "center",
                        "padding": "0.125rem",
                      }
                    }
                    onClick={[Function]}
                  >
                    <span
                      css={[Function]}
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Select Async Select with min characters 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    css={
      Object {
        "map": undefined,
        "name": "1n5daz0",
        "next": undefined,
        "styles": "
        width: 25%;
        height: 100%;
      ",
        "toString": [Function],
      }
    }
  >
    <div
      role="button"
    >
      <div
        css={
          Object {
            "map": undefined,
            "name": "17wyy39",
            "next": undefined,
            "styles": "
            position: relative;
            min-width: 9.375rem;
            max-width: 38.75rem;
          ",
            "toString": [Function],
          }
        }
      >
        <div
          css={
            Object {
              "alignItems": "center",
              "display": "flex",
              "position": "relative",
              "width": "fill-available",
            }
          }
        >
          <div
            css={[Function]}
          >
            <div
              css={[Function]}
            >
              <div
                css={
                  Object {
                    "width": "100% ",
                  }
                }
              >
                <input
                  css={[Function]}
                  data-testid="select-input"
                  disabled={false}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  onKeyDown={[Function]}
                  onKeyPress={[Function]}
                  placeholder="Flavour"
                  readOnly={false}
                  required={false}
                  value=""
                />
                <label
                  css={[Function]}
                >
                  Flavour
                   
                </label>
              </div>
              <div
                css={[Function]}
              >
                <div
                  css={
                    Object {
                      "map": undefined,
                      "name": "1o9yjvp",
                      "next": undefined,
                      "styles": "
            display: flex;
            gap: 25px;
          ",
                      "toString": [Function],
                    }
                  }
                >
                  <span
                    css={
                      Object {
                        "alignItems": "center",
                        "display": "flex",
                        "justifyContent": "center",
                        "padding": "0.125rem",
                      }
                    }
                    onClick={[Function]}
                  >
                    <span
                      css={[Function]}
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Select Disabled Select 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    css={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
      }
    }
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        role="button"
      >
        <div
          css={
            Object {
              "map": undefined,
              "name": "17wyy39",
              "next": undefined,
              "styles": "
            position: relative;
            min-width: 9.375rem;
            max-width: 38.75rem;
          ",
              "toString": [Function],
            }
          }
        >
          <div
            css={
              Object {
                "alignItems": "center",
                "display": "flex",
                "position": "relative",
                "width": "fill-available",
              }
            }
          >
            <div
              css={[Function]}
            >
              <div
                css={[Function]}
              >
                <div
                  css={
                    Object {
                      "width": "100% ",
                    }
                  }
                >
                  <input
                    css={[Function]}
                    data-testid="select-input"
                    disabled={true}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onInput={[Function]}
                    onKeyDown={[Function]}
                    placeholder="Flavour"
                    readOnly={false}
                    required={false}
                    value=""
                  />
                  <label
                    css={[Function]}
                  >
                    Flavour
                     
                  </label>
                </div>
                <div
                  css={[Function]}
                >
                  <div
                    css={
                      Object {
                        "map": undefined,
                        "name": "1o9yjvp",
                        "next": undefined,
                        "styles": "
            display: flex;
            gap: 25px;
          ",
                        "toString": [Function],
                      }
                    }
                  >
                    <span
                      css={
                        Object {
                          "alignItems": "center",
                          "display": "flex",
                          "justifyContent": "center",
                          "padding": "0.125rem",
                        }
                      }
                      onClick={[Function]}
                    >
                      <span
                        css={[Function]}
                      />
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        role="button"
      >
        <div
          css={
            Object {
              "map": undefined,
              "name": "17wyy39",
              "next": undefined,
              "styles": "
            position: relative;
            min-width: 9.375rem;
            max-width: 38.75rem;
          ",
              "toString": [Function],
            }
          }
        >
          <div
            css={
              Object {
                "alignItems": "center",
                "display": "flex",
                "position": "relative",
                "width": "fill-available",
              }
            }
          >
            <div
              css={[Function]}
            >
              <div
                css={[Function]}
              >
                <div
                  css={
                    Object {
                      "width": "100% ",
                    }
                  }
                >
                  <input
                    css={[Function]}
                    data-testid="select-input"
                    disabled={true}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onInput={[Function]}
                    onKeyDown={[Function]}
                    placeholder="Flavour"
                    readOnly={false}
                    required={false}
                    value=""
                  />
                  <label
                    css={[Function]}
                  >
                    Flavour
                     
                  </label>
                </div>
                <div
                  css={[Function]}
                >
                  <div
                    css={
                      Object {
                        "map": undefined,
                        "name": "1o9yjvp",
                        "next": undefined,
                        "styles": "
            display: flex;
            gap: 25px;
          ",
                        "toString": [Function],
                      }
                    }
                  >
                    <span
                      css={
                        Object {
                          "alignItems": "center",
                          "display": "flex",
                          "justifyContent": "center",
                          "padding": "0.125rem",
                        }
                      }
                      onClick={[Function]}
                    >
                      <span
                        css={[Function]}
                      />
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        role="button"
      >
        <div
          css={
            Object {
              "map": undefined,
              "name": "17wyy39",
              "next": undefined,
              "styles": "
            position: relative;
            min-width: 9.375rem;
            max-width: 38.75rem;
          ",
              "toString": [Function],
            }
          }
        >
          <div
            css={
              Object {
                "alignItems": "center",
                "display": "flex",
                "position": "relative",
                "width": "fill-available",
              }
            }
          >
            <div
              css={[Function]}
            >
              <div
                css={[Function]}
              >
                <div
                  css={
                    Object {
                      "width": "100% ",
                    }
                  }
                >
                  <input
                    css={[Function]}
                    data-testid="select-input"
                    disabled={true}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onInput={[Function]}
                    onKeyDown={[Function]}
                    placeholder="Flavour"
                    readOnly={false}
                    required={false}
                    value=""
                  />
                  <label
                    css={[Function]}
                  >
                    Flavour
                     
                  </label>
                </div>
                <div
                  css={[Function]}
                >
                  <div
                    css={
                      Object {
                        "map": undefined,
                        "name": "1o9yjvp",
                        "next": undefined,
                        "styles": "
            display: flex;
            gap: 25px;
          ",
                        "toString": [Function],
                      }
                    }
                  >
                    <span
                      css={
                        Object {
                          "alignItems": "center",
                          "display": "flex",
                          "justifyContent": "center",
                          "padding": "0.125rem",
                        }
                      }
                      onClick={[Function]}
                    >
                      <span
                        css={[Function]}
                      />
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Select Not Searchable Select 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    css={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
      }
    }
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        role="button"
      >
        <div
          css={
            Object {
              "map": undefined,
              "name": "17wyy39",
              "next": undefined,
              "styles": "
            position: relative;
            min-width: 9.375rem;
            max-width: 38.75rem;
          ",
              "toString": [Function],
            }
          }
        >
          <div
            css={
              Object {
                "alignItems": "center",
                "display": "flex",
                "position": "relative",
                "width": "fill-available",
              }
            }
          >
            <div
              css={[Function]}
            >
              <div
                css={[Function]}
              >
                <div
                  css={
                    Object {
                      "width": "100% ",
                    }
                  }
                >
                  <input
                    css={[Function]}
                    data-testid="select-input"
                    disabled={false}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onInput={[Function]}
                    onKeyDown={[Function]}
                    placeholder="Flavour"
                    readOnly={true}
                    required={false}
                    value=""
                  />
                  <label
                    css={[Function]}
                  >
                    Flavour
                     
                  </label>
                </div>
                <div
                  css={[Function]}
                >
                  <div
                    css={
                      Object {
                        "map": undefined,
                        "name": "1o9yjvp",
                        "next": undefined,
                        "styles": "
            display: flex;
            gap: 25px;
          ",
                        "toString": [Function],
                      }
                    }
                  >
                    <span
                      css={
                        Object {
                          "alignItems": "center",
                          "display": "flex",
                          "justifyContent": "center",
                          "padding": "0.125rem",
                        }
                      }
                      onClick={[Function]}
                    >
                      <span
                        css={[Function]}
                      />
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Select Select Sizes 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    css={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
      }
    }
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        role="button"
      >
        <div
          css={
            Object {
              "map": undefined,
              "name": "17wyy39",
              "next": undefined,
              "styles": "
            position: relative;
            min-width: 9.375rem;
            max-width: 38.75rem;
          ",
              "toString": [Function],
            }
          }
        >
          <div
            css={
              Object {
                "alignItems": "center",
                "display": "flex",
                "position": "relative",
                "width": "fill-available",
              }
            }
          >
            <div
              css={[Function]}
            >
              <div
                css={[Function]}
              >
                <div
                  css={
                    Object {
                      "width": "100% ",
                    }
                  }
                >
                  <input
                    css={[Function]}
                    data-testid="select-input"
                    disabled={false}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onInput={[Function]}
                    onKeyDown={[Function]}
                    placeholder="Flavour"
                    readOnly={false}
                    required={false}
                    value="Chocolate"
                  />
                  <label
                    css={[Function]}
                  >
                    Flavour
                     
                  </label>
                </div>
                <div
                  css={[Function]}
                >
                  <div
                    css={
                      Object {
                        "map": undefined,
                        "name": "1o9yjvp",
                        "next": undefined,
                        "styles": "
            display: flex;
            gap: 25px;
          ",
                        "toString": [Function],
                      }
                    }
                  >
                    <span
                      css={
                        Object {
                          "alignItems": "center",
                          "display": "flex",
                          "justifyContent": "center",
                          "padding": "0.125rem",
                        }
                      }
                      onClick={[Function]}
                    >
                      <span
                        css={[Function]}
                      />
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        role="button"
      >
        <div
          css={
            Object {
              "map": undefined,
              "name": "17wyy39",
              "next": undefined,
              "styles": "
            position: relative;
            min-width: 9.375rem;
            max-width: 38.75rem;
          ",
              "toString": [Function],
            }
          }
        >
          <div
            css={
              Object {
                "alignItems": "center",
                "display": "flex",
                "position": "relative",
                "width": "fill-available",
              }
            }
          >
            <div
              css={[Function]}
            >
              <div
                css={[Function]}
              >
                <div
                  css={
                    Object {
                      "width": "100% ",
                    }
                  }
                >
                  <input
                    css={[Function]}
                    data-testid="select-input"
                    disabled={false}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onInput={[Function]}
                    onKeyDown={[Function]}
                    placeholder="Flavour"
                    readOnly={false}
                    required={false}
                    value="Chocolate"
                  />
                  <label
                    css={[Function]}
                  >
                    Flavour
                     
                  </label>
                </div>
                <div
                  css={[Function]}
                >
                  <div
                    css={
                      Object {
                        "map": undefined,
                        "name": "1o9yjvp",
                        "next": undefined,
                        "styles": "
            display: flex;
            gap: 25px;
          ",
                        "toString": [Function],
                      }
                    }
                  >
                    <span
                      css={
                        Object {
                          "alignItems": "center",
                          "display": "flex",
                          "justifyContent": "center",
                          "padding": "0.125rem",
                        }
                      }
                      onClick={[Function]}
                    >
                      <span
                        css={[Function]}
                      />
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Select Select with Highlight 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    css={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
      }
    }
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        role="button"
      >
        <div
          css={
            Object {
              "map": undefined,
              "name": "17wyy39",
              "next": undefined,
              "styles": "
            position: relative;
            min-width: 9.375rem;
            max-width: 38.75rem;
          ",
              "toString": [Function],
            }
          }
        >
          <div
            css={
              Object {
                "alignItems": "center",
                "display": "flex",
                "position": "relative",
                "width": "fill-available",
              }
            }
          >
            <div
              css={[Function]}
            >
              <div
                css={[Function]}
              >
                <div
                  css={
                    Object {
                      "width": "100% ",
                    }
                  }
                >
                  <input
                    css={[Function]}
                    data-testid="select-input"
                    disabled={false}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onInput={[Function]}
                    onKeyDown={[Function]}
                    placeholder="Flavour"
                    readOnly={false}
                    required={false}
                    value=""
                  />
                  <label
                    css={[Function]}
                  >
                    Flavour
                     
                  </label>
                </div>
                <div
                  css={[Function]}
                >
                  <div
                    css={
                      Object {
                        "map": undefined,
                        "name": "1o9yjvp",
                        "next": undefined,
                        "styles": "
            display: flex;
            gap: 25px;
          ",
                        "toString": [Function],
                      }
                    }
                  >
                    <span
                      css={
                        Object {
                          "alignItems": "center",
                          "display": "flex",
                          "justifyContent": "center",
                          "padding": "0.125rem",
                        }
                      }
                      onClick={[Function]}
                    >
                      <span
                        css={[Function]}
                      />
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Select Select with edge case 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    style={
      Object {
        "width": 250,
      }
    }
  >
    <div
      role="button"
    >
      <div
        css={
          Object {
            "map": undefined,
            "name": "17wyy39",
            "next": undefined,
            "styles": "
            position: relative;
            min-width: 9.375rem;
            max-width: 38.75rem;
          ",
            "toString": [Function],
          }
        }
      >
        <div
          css={
            Object {
              "alignItems": "center",
              "display": "flex",
              "position": "relative",
              "width": "fill-available",
            }
          }
        >
          <div
            css={[Function]}
          >
            <div
              css={[Function]}
            >
              <div
                css={
                  Object {
                    "width": "100% ",
                  }
                }
              >
                <input
                  css={[Function]}
                  data-testid="select-input"
                  disabled={false}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  onKeyDown={[Function]}
                  placeholder="Flavour"
                  readOnly={false}
                  required={false}
                  value="Chocolate"
                />
                <label
                  css={[Function]}
                >
                  Flavour
                   
                </label>
              </div>
              <div
                css={[Function]}
              >
                <div
                  css={
                    Object {
                      "map": undefined,
                      "name": "1o9yjvp",
                      "next": undefined,
                      "styles": "
            display: flex;
            gap: 25px;
          ",
                      "toString": [Function],
                    }
                  }
                >
                  <span
                    css={
                      Object {
                        "alignItems": "center",
                        "display": "flex",
                        "justifyContent": "center",
                        "padding": "0.125rem",
                      }
                    }
                    onClick={[Function]}
                  >
                    <span
                      css={[Function]}
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    role="button"
  >
    <div
      css={
        Object {
          "map": undefined,
          "name": "17wyy39",
          "next": undefined,
          "styles": "
            position: relative;
            min-width: 9.375rem;
            max-width: 38.75rem;
          ",
          "toString": [Function],
        }
      }
    >
      <div
        css={
          Object {
            "alignItems": "center",
            "display": "flex",
            "position": "relative",
            "width": "fill-available",
          }
        }
      >
        <div
          css={[Function]}
        >
          <div
            css={[Function]}
          >
            <div
              css={
                Object {
                  "width": "100% ",
                }
              }
            >
              <input
                css={[Function]}
                data-testid="select-input"
                disabled={false}
                onChange={[Function]}
                onFocus={[Function]}
                onInput={[Function]}
                onKeyDown={[Function]}
                placeholder="Flavour"
                readOnly={false}
                required={false}
                value="Chocolate"
              />
              <label
                css={[Function]}
              >
                Flavour
                 
              </label>
            </div>
            <div
              css={[Function]}
            >
              <div
                css={
                  Object {
                    "map": undefined,
                    "name": "1o9yjvp",
                    "next": undefined,
                    "styles": "
            display: flex;
            gap: 25px;
          ",
                    "toString": [Function],
                  }
                }
              >
                <span
                  css={
                    Object {
                      "alignItems": "center",
                      "display": "flex",
                      "justifyContent": "center",
                      "padding": "0.125rem",
                    }
                  }
                  onClick={[Function]}
                >
                  <span
                    css={[Function]}
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    style={
      Object {
        "width": 100,
      }
    }
  >
    <div
      role="button"
    >
      <div
        css={
          Object {
            "map": undefined,
            "name": "17wyy39",
            "next": undefined,
            "styles": "
            position: relative;
            min-width: 9.375rem;
            max-width: 38.75rem;
          ",
            "toString": [Function],
          }
        }
      >
        <div
          css={
            Object {
              "alignItems": "center",
              "display": "flex",
              "position": "relative",
              "width": "fill-available",
            }
          }
        >
          <div
            css={[Function]}
          >
            <div
              css={[Function]}
            >
              <div
                css={
                  Object {
                    "width": "100% ",
                  }
                }
              >
                <input
                  css={[Function]}
                  data-testid="select-input"
                  disabled={false}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  onKeyDown={[Function]}
                  placeholder="Flavour"
                  readOnly={false}
                  required={false}
                  value="Chocolate"
                />
                <label
                  css={[Function]}
                >
                  Flavour
                   
                </label>
              </div>
              <div
                css={[Function]}
              >
                <div
                  css={
                    Object {
                      "map": undefined,
                      "name": "1o9yjvp",
                      "next": undefined,
                      "styles": "
            display: flex;
            gap: 25px;
          ",
                      "toString": [Function],
                    }
                  }
                >
                  <span
                    css={
                      Object {
                        "alignItems": "center",
                        "display": "flex",
                        "justifyContent": "center",
                        "padding": "0.125rem",
                      }
                    }
                    onClick={[Function]}
                  >
                    <span
                      css={[Function]}
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Select Select with icon and size 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    css={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
      }
    }
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        role="button"
      >
        <div
          css={
            Object {
              "map": undefined,
              "name": "17wyy39",
              "next": undefined,
              "styles": "
            position: relative;
            min-width: 9.375rem;
            max-width: 38.75rem;
          ",
              "toString": [Function],
            }
          }
        >
          <div
            css={
              Object {
                "alignItems": "center",
                "display": "flex",
                "position": "relative",
                "width": "fill-available",
              }
            }
          >
            <div
              css={[Function]}
            >
              <div
                css={[Function]}
              >
                <div
                  css={[Function]}
                >
                  <img
                    height="16"
                    src="https://brandmark.io/logo-rank/random/pepsi.png"
                    style={
                      Object {
                        "background": "red",
                      }
                    }
                    width="16"
                  />
                </div>
                <div
                  css={
                    Object {
                      "width": "100% ",
                    }
                  }
                >
                  <input
                    css={[Function]}
                    data-testid="select-input"
                    disabled={false}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onInput={[Function]}
                    onKeyDown={[Function]}
                    placeholder="Flavour"
                    readOnly={false}
                    required={false}
                    value="Chocolate"
                  />
                  <label
                    css={[Function]}
                  >
                    Flavour
                     
                  </label>
                </div>
                <div
                  css={[Function]}
                >
                  <div
                    css={
                      Object {
                        "map": undefined,
                        "name": "1o9yjvp",
                        "next": undefined,
                        "styles": "
            display: flex;
            gap: 25px;
          ",
                        "toString": [Function],
                      }
                    }
                  >
                    <span
                      css={
                        Object {
                          "alignItems": "center",
                          "display": "flex",
                          "justifyContent": "center",
                          "padding": "0.125rem",
                        }
                      }
                      onClick={[Function]}
                    >
                      <span
                        css={[Function]}
                      />
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        role="button"
      >
        <div
          css={
            Object {
              "map": undefined,
              "name": "17wyy39",
              "next": undefined,
              "styles": "
            position: relative;
            min-width: 9.375rem;
            max-width: 38.75rem;
          ",
              "toString": [Function],
            }
          }
        >
          <div
            css={
              Object {
                "alignItems": "center",
                "display": "flex",
                "position": "relative",
                "width": "fill-available",
              }
            }
          >
            <div
              css={[Function]}
            >
              <div
                css={[Function]}
              >
                <div
                  css={
                    Object {
                      "width": "100% ",
                    }
                  }
                >
                  <input
                    css={[Function]}
                    data-testid="select-input"
                    disabled={false}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onInput={[Function]}
                    onKeyDown={[Function]}
                    placeholder="Flavour"
                    readOnly={false}
                    required={false}
                    value="Chocolate"
                  />
                  <label
                    css={[Function]}
                  >
                    Flavour
                     
                  </label>
                </div>
                <div
                  css={[Function]}
                >
                  <img
                    height="16"
                    src="https://brandmark.io/logo-rank/random/pepsi.png"
                    style={
                      Object {
                        "background": "red",
                      }
                    }
                    width="16"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        role="button"
      >
        <div
          css={
            Object {
              "map": undefined,
              "name": "17wyy39",
              "next": undefined,
              "styles": "
            position: relative;
            min-width: 9.375rem;
            max-width: 38.75rem;
          ",
              "toString": [Function],
            }
          }
        >
          <div
            css={
              Object {
                "alignItems": "center",
                "display": "flex",
                "position": "relative",
                "width": "fill-available",
              }
            }
          >
            <div
              css={[Function]}
            >
              <div
                css={[Function]}
              >
                <div
                  css={[Function]}
                >
                  <img
                    height="16"
                    src="https://brandmark.io/logo-rank/random/pepsi.png"
                    style={
                      Object {
                        "background": "red",
                      }
                    }
                    width="16"
                  />
                </div>
                <div
                  css={
                    Object {
                      "width": "100% ",
                    }
                  }
                >
                  <input
                    css={[Function]}
                    data-testid="select-input"
                    disabled={false}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onInput={[Function]}
                    onKeyDown={[Function]}
                    placeholder="Flavour"
                    readOnly={false}
                    required={false}
                    value="Chocolate"
                  />
                  <label
                    css={[Function]}
                  >
                    Flavour
                     
                  </label>
                </div>
                <div
                  css={[Function]}
                >
                  <img
                    height="16"
                    src="https://brandmark.io/logo-rank/random/pepsi.png"
                    style={
                      Object {
                        "background": "red",
                      }
                    }
                    width="16"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Select Select with label and statuses 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    css={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
      }
    }
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        css={
          Object {
            "display": "flex",
            "flexDirection": "row",
            "flexWrap": "wrap",
          }
        }
      >
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            role="button"
          >
            <div
              css={
                Object {
                  "map": undefined,
                  "name": "17wyy39",
                  "next": undefined,
                  "styles": "
            position: relative;
            min-width: 9.375rem;
            max-width: 38.75rem;
          ",
                  "toString": [Function],
                }
              }
            >
              <div
                css={
                  Object {
                    "alignItems": "center",
                    "display": "flex",
                    "position": "relative",
                    "width": "fill-available",
                  }
                }
              >
                <div
                  css={[Function]}
                >
                  <div
                    css={[Function]}
                  >
                    <div
                      css={
                        Object {
                          "width": "100% ",
                        }
                      }
                    >
                      <input
                        css={[Function]}
                        data-testid="select-input"
                        disabled={false}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onInput={[Function]}
                        onKeyDown={[Function]}
                        placeholder="Label"
                        readOnly={false}
                        required={false}
                        value="Chocolate"
                      />
                      <label
                        css={[Function]}
                      >
                        Label
                         
                      </label>
                    </div>
                    <div
                      css={[Function]}
                    >
                      <div
                        css={
                          Object {
                            "map": undefined,
                            "name": "1o9yjvp",
                            "next": undefined,
                            "styles": "
            display: flex;
            gap: 25px;
          ",
                            "toString": [Function],
                          }
                        }
                      >
                        <span
                          css={
                            Object {
                              "alignItems": "center",
                              "display": "flex",
                              "justifyContent": "center",
                              "padding": "0.125rem",
                            }
                          }
                          onClick={[Function]}
                        >
                          <span
                            css={[Function]}
                          />
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                css={[Function]}
              >
                <span
                  css={
                    Object {
                      "alignItems": "center",
                      "display": "flex",
                      "justifyContent": "center",
                      "padding": "0.125rem",
                    }
                  }
                  onClick={[Function]}
                >
                  <span
                    css={[Function]}
                  />
                </span>
                Error in Select
              </div>
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            role="button"
          >
            <div
              css={
                Object {
                  "map": undefined,
                  "name": "17wyy39",
                  "next": undefined,
                  "styles": "
            position: relative;
            min-width: 9.375rem;
            max-width: 38.75rem;
          ",
                  "toString": [Function],
                }
              }
            >
              <div
                css={
                  Object {
                    "alignItems": "center",
                    "display": "flex",
                    "position": "relative",
                    "width": "fill-available",
                  }
                }
              >
                <div
                  css={[Function]}
                >
                  <div
                    css={[Function]}
                  >
                    <div
                      css={
                        Object {
                          "width": "100% ",
                        }
                      }
                    >
                      <input
                        css={[Function]}
                        data-testid="select-input"
                        disabled={false}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onInput={[Function]}
                        onKeyDown={[Function]}
                        placeholder="Label"
                        readOnly={false}
                        required={false}
                        value="Chocolate"
                      />
                      <label
                        css={[Function]}
                      >
                        Label
                         
                      </label>
                    </div>
                    <div
                      css={[Function]}
                    >
                      <div
                        css={
                          Object {
                            "map": undefined,
                            "name": "1o9yjvp",
                            "next": undefined,
                            "styles": "
            display: flex;
            gap: 25px;
          ",
                            "toString": [Function],
                          }
                        }
                      >
                        <span
                          css={
                            Object {
                              "alignItems": "center",
                              "display": "flex",
                              "justifyContent": "center",
                              "padding": "0.125rem",
                            }
                          }
                          onClick={[Function]}
                        >
                          <span
                            css={[Function]}
                          />
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                css={[Function]}
              >
                <span
                  css={
                    Object {
                      "alignItems": "center",
                      "display": "flex",
                      "justifyContent": "center",
                      "padding": "0.125rem",
                    }
                  }
                  onClick={[Function]}
                >
                  <span
                    css={[Function]}
                  />
                </span>
                Error in Select
              </div>
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            role="button"
          >
            <div
              css={
                Object {
                  "map": undefined,
                  "name": "17wyy39",
                  "next": undefined,
                  "styles": "
            position: relative;
            min-width: 9.375rem;
            max-width: 38.75rem;
          ",
                  "toString": [Function],
                }
              }
            >
              <div
                css={
                  Object {
                    "alignItems": "center",
                    "display": "flex",
                    "position": "relative",
                    "width": "fill-available",
                  }
                }
              >
                <div
                  css={[Function]}
                >
                  <div
                    css={[Function]}
                  >
                    <div
                      css={
                        Object {
                          "width": "100% ",
                        }
                      }
                    >
                      <input
                        css={[Function]}
                        data-testid="select-input"
                        disabled={false}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onInput={[Function]}
                        onKeyDown={[Function]}
                        placeholder="Label"
                        readOnly={false}
                        required={false}
                        value="Chocolate"
                      />
                      <label
                        css={[Function]}
                      >
                        Label
                         
                      </label>
                    </div>
                    <div
                      css={[Function]}
                    >
                      <div
                        css={
                          Object {
                            "map": undefined,
                            "name": "1o9yjvp",
                            "next": undefined,
                            "styles": "
            display: flex;
            gap: 25px;
          ",
                            "toString": [Function],
                          }
                        }
                      >
                        <span
                          css={
                            Object {
                              "alignItems": "center",
                              "display": "flex",
                              "justifyContent": "center",
                              "padding": "0.125rem",
                            }
                          }
                          onClick={[Function]}
                        >
                          <span
                            css={[Function]}
                          />
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                css={[Function]}
              >
                <span
                  css={
                    Object {
                      "alignItems": "center",
                      "display": "flex",
                      "justifyContent": "center",
                      "padding": "0.125rem",
                    }
                  }
                  onClick={[Function]}
                >
                  <span
                    css={[Function]}
                  />
                </span>
                Error in Select
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        css={
          Object {
            "display": "flex",
            "flexDirection": "row",
            "flexWrap": "wrap",
          }
        }
      >
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            role="button"
          >
            <div
              css={
                Object {
                  "map": undefined,
                  "name": "17wyy39",
                  "next": undefined,
                  "styles": "
            position: relative;
            min-width: 9.375rem;
            max-width: 38.75rem;
          ",
                  "toString": [Function],
                }
              }
            >
              <div
                css={
                  Object {
                    "alignItems": "center",
                    "display": "flex",
                    "position": "relative",
                    "width": "fill-available",
                  }
                }
              >
                <div
                  css={[Function]}
                >
                  <div
                    css={[Function]}
                  >
                    <div
                      css={
                        Object {
                          "width": "100% ",
                        }
                      }
                    >
                      <input
                        css={[Function]}
                        data-testid="select-input"
                        disabled={false}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onInput={[Function]}
                        onKeyDown={[Function]}
                        placeholder="Label"
                        readOnly={false}
                        required={false}
                        value=""
                      />
                      <label
                        css={[Function]}
                      >
                        Label
                         
                      </label>
                    </div>
                    <div
                      css={[Function]}
                    >
                      <div
                        css={
                          Object {
                            "map": undefined,
                            "name": "1o9yjvp",
                            "next": undefined,
                            "styles": "
            display: flex;
            gap: 25px;
          ",
                            "toString": [Function],
                          }
                        }
                      >
                        <span
                          css={
                            Object {
                              "alignItems": "center",
                              "display": "flex",
                              "justifyContent": "center",
                              "padding": "0.125rem",
                            }
                          }
                          onClick={[Function]}
                        >
                          <span
                            css={[Function]}
                          />
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                css={[Function]}
              >
                <span
                  css={
                    Object {
                      "alignItems": "center",
                      "display": "flex",
                      "justifyContent": "center",
                      "padding": "0.125rem",
                    }
                  }
                  onClick={[Function]}
                >
                  <span
                    css={[Function]}
                  />
                </span>
                Error in Select
              </div>
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            role="button"
          >
            <div
              css={
                Object {
                  "map": undefined,
                  "name": "17wyy39",
                  "next": undefined,
                  "styles": "
            position: relative;
            min-width: 9.375rem;
            max-width: 38.75rem;
          ",
                  "toString": [Function],
                }
              }
            >
              <div
                css={
                  Object {
                    "alignItems": "center",
                    "display": "flex",
                    "position": "relative",
                    "width": "fill-available",
                  }
                }
              >
                <div
                  css={[Function]}
                >
                  <div
                    css={[Function]}
                  >
                    <div
                      css={
                        Object {
                          "width": "100% ",
                        }
                      }
                    >
                      <input
                        css={[Function]}
                        data-testid="select-input"
                        disabled={false}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onInput={[Function]}
                        onKeyDown={[Function]}
                        placeholder="Label"
                        readOnly={false}
                        required={false}
                        value=""
                      />
                      <label
                        css={[Function]}
                      >
                        Label
                         
                      </label>
                    </div>
                    <div
                      css={[Function]}
                    >
                      <div
                        css={
                          Object {
                            "map": undefined,
                            "name": "1o9yjvp",
                            "next": undefined,
                            "styles": "
            display: flex;
            gap: 25px;
          ",
                            "toString": [Function],
                          }
                        }
                      >
                        <span
                          css={
                            Object {
                              "alignItems": "center",
                              "display": "flex",
                              "justifyContent": "center",
                              "padding": "0.125rem",
                            }
                          }
                          onClick={[Function]}
                        >
                          <span
                            css={[Function]}
                          />
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                css={[Function]}
              >
                <span
                  css={
                    Object {
                      "alignItems": "center",
                      "display": "flex",
                      "justifyContent": "center",
                      "padding": "0.125rem",
                    }
                  }
                  onClick={[Function]}
                >
                  <span
                    css={[Function]}
                  />
                </span>
                Error in Select
              </div>
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            role="button"
          >
            <div
              css={
                Object {
                  "map": undefined,
                  "name": "17wyy39",
                  "next": undefined,
                  "styles": "
            position: relative;
            min-width: 9.375rem;
            max-width: 38.75rem;
          ",
                  "toString": [Function],
                }
              }
            >
              <div
                css={
                  Object {
                    "alignItems": "center",
                    "display": "flex",
                    "position": "relative",
                    "width": "fill-available",
                  }
                }
              >
                <div
                  css={[Function]}
                >
                  <div
                    css={[Function]}
                  >
                    <div
                      css={
                        Object {
                          "width": "100% ",
                        }
                      }
                    >
                      <input
                        css={[Function]}
                        data-testid="select-input"
                        disabled={false}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onInput={[Function]}
                        onKeyDown={[Function]}
                        placeholder="Label"
                        readOnly={false}
                        required={false}
                        value=""
                      />
                      <label
                        css={[Function]}
                      >
                        Label
                         
                      </label>
                    </div>
                    <div
                      css={[Function]}
                    >
                      <div
                        css={
                          Object {
                            "map": undefined,
                            "name": "1o9yjvp",
                            "next": undefined,
                            "styles": "
            display: flex;
            gap: 25px;
          ",
                            "toString": [Function],
                          }
                        }
                      >
                        <span
                          css={
                            Object {
                              "alignItems": "center",
                              "display": "flex",
                              "justifyContent": "center",
                              "padding": "0.125rem",
                            }
                          }
                          onClick={[Function]}
                        >
                          <span
                            css={[Function]}
                          />
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                css={[Function]}
              >
                <span
                  css={
                    Object {
                      "alignItems": "center",
                      "display": "flex",
                      "justifyContent": "center",
                      "padding": "0.125rem",
                    }
                  }
                  onClick={[Function]}
                >
                  <span
                    css={[Function]}
                  />
                </span>
                Error in Select
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Select Simple Select 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    css={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
      }
    }
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        role="button"
      >
        <div
          css={
            Object {
              "map": undefined,
              "name": "17wyy39",
              "next": undefined,
              "styles": "
            position: relative;
            min-width: 9.375rem;
            max-width: 38.75rem;
          ",
              "toString": [Function],
            }
          }
        >
          <div
            css={
              Object {
                "alignItems": "center",
                "display": "flex",
                "position": "relative",
                "width": "fill-available",
              }
            }
          >
            <div
              css={[Function]}
            >
              <div
                css={[Function]}
              >
                <div
                  css={
                    Object {
                      "width": "100% ",
                    }
                  }
                >
                  <input
                    css={[Function]}
                    data-testid="select-input"
                    disabled={false}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onInput={[Function]}
                    onKeyDown={[Function]}
                    placeholder="Flavour"
                    readOnly={false}
                    required={false}
                    value="Chocolate"
                  />
                  <label
                    css={[Function]}
                  >
                    Flavour
                     
                  </label>
                </div>
                <div
                  css={[Function]}
                >
                  <div
                    css={
                      Object {
                        "map": undefined,
                        "name": "1o9yjvp",
                        "next": undefined,
                        "styles": "
            display: flex;
            gap: 25px;
          ",
                        "toString": [Function],
                      }
                    }
                  >
                    <span
                      css={
                        Object {
                          "alignItems": "center",
                          "display": "flex",
                          "justifyContent": "center",
                          "padding": "0.125rem",
                        }
                      }
                      onClick={[Function]}
                    >
                      <span
                        css={[Function]}
                      />
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        role="button"
      >
        <div
          css={
            Object {
              "map": undefined,
              "name": "17wyy39",
              "next": undefined,
              "styles": "
            position: relative;
            min-width: 9.375rem;
            max-width: 38.75rem;
          ",
              "toString": [Function],
            }
          }
        >
          <div
            css={
              Object {
                "alignItems": "center",
                "display": "flex",
                "position": "relative",
                "width": "fill-available",
              }
            }
          >
            <div
              css={[Function]}
            >
              <div
                css={[Function]}
              >
                <div
                  css={
                    Object {
                      "width": "100% ",
                    }
                  }
                >
                  <input
                    css={[Function]}
                    data-testid="select-input"
                    disabled={false}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onInput={[Function]}
                    onKeyDown={[Function]}
                    placeholder="Flavour"
                    readOnly={false}
                    required={false}
                    value="Chocolate"
                  />
                  <label
                    css={[Function]}
                  >
                    Flavour
                     
                  </label>
                </div>
                <div
                  css={[Function]}
                >
                  <div
                    css={
                      Object {
                        "map": undefined,
                        "name": "1o9yjvp",
                        "next": undefined,
                        "styles": "
            display: flex;
            gap: 25px;
          ",
                        "toString": [Function],
                      }
                    }
                  >
                    <span
                      css={
                        Object {
                          "alignItems": "center",
                          "display": "flex",
                          "justifyContent": "center",
                          "padding": "0.125rem",
                        }
                      }
                      onClick={[Function]}
                    >
                      <span
                        css={[Function]}
                      />
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        role="button"
      >
        <div
          css={
            Object {
              "map": undefined,
              "name": "17wyy39",
              "next": undefined,
              "styles": "
            position: relative;
            min-width: 9.375rem;
            max-width: 38.75rem;
          ",
              "toString": [Function],
            }
          }
        >
          <div
            css={
              Object {
                "alignItems": "center",
                "display": "flex",
                "position": "relative",
                "width": "fill-available",
              }
            }
          >
            <div
              css={[Function]}
            >
              <div
                css={[Function]}
              >
                <div
                  css={
                    Object {
                      "width": "100% ",
                    }
                  }
                >
                  <input
                    css={[Function]}
                    data-testid="select-input"
                    disabled={false}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onInput={[Function]}
                    onKeyDown={[Function]}
                    placeholder="Flavour"
                    readOnly={false}
                    required={false}
                    value="Chocolate"
                  />
                  <label
                    css={[Function]}
                  >
                    Flavour
                     
                  </label>
                </div>
                <div
                  css={[Function]}
                >
                  <div
                    css={
                      Object {
                        "map": undefined,
                        "name": "1o9yjvp",
                        "next": undefined,
                        "styles": "
            display: flex;
            gap: 25px;
          ",
                        "toString": [Function],
                      }
                    }
                  >
                    <span
                      css={
                        Object {
                          "alignItems": "center",
                          "display": "flex",
                          "justifyContent": "center",
                          "padding": "0.125rem",
                        }
                      }
                      onClick={[Function]}
                    >
                      <span
                        css={[Function]}
                      />
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
